# chaos-bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.pm/: task-1.md  task-2.md
backend/: Cargo.toml
backend/src/: agent.rs  api.rs  bootstrap.rs  config.rs  config_runtime.rs  lib.rs  logging.rs  main.rs  memory.rs  personality.rs  runtime_assets.rs  sessions.rs  types.rs
backend/src/application/: agent.rs  chat_service.rs  config_service.rs  mod.rs  session_service.rs
backend/src/domain/: audit.rs  chat.rs  config.rs  error.rs  mod.rs  ports.rs  skills.rs  types.rs
backend/src/infrastructure/: config.rs  logging.rs  memory.rs  mod.rs  personality.rs  runtime_assets.rs  session_store.rs  skills.rs
backend/src/infrastructure/channels/: mod.rs  telegram.rs
backend/src/infrastructure/model/: mod.rs
backend/src/infrastructure/tooling/: mod.rs
backend/src/interface/: api.rs  http.rs  mod.rs
backend/src/llm/: mod.rs
backend/src/runtime/: bootstrap.rs  config_runtime.rs  mod.rs
backend/src/tools/: mod.rs
backend/tests/: agent_prompt.rs  api_integration.rs  api_routes.rs  tools_symlink.rs  unit_agent.rs  unit_bootstrap.rs  unit_config.rs  unit_llm.rs  unit_logging.rs  unit_memory.rs  unit_personality.rs  unit_sessions.rs  unit_tools.rs  unit_types.rs
backend/tests/support/: mod.rs
docs/: tauri-packaging.md
e2e/: package-lock.json  package.json  playwright.config.ts  run-with-agent-config.sh
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+62 files in other folders)
