[package]
name = "chaos-bot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[dev-dependencies]
assert-json-diff = "2"
pretty_assertions = "1"
serial_test = "3"
tempfile = "3"
tower = "0.5"
