[package]
name = "chaos-bot-app"
version = "0.1.0"
edition = "2021"
authors = ["chaos-bot"]

[workspace]

[lib]
name = "chaos_bot_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
